Use List.of and Stream#toList instead of ImmutableLists
Signed-off-by: GoldenStack <goldenfire64yt@gmail.com>